<resources>
    <string name="app_name">Compass Navigate</string>
    <string name="label_track_review">Track Review</string>
    <string name="label_upload_feature">Upload Record</string>
    <string name="dummy_button">Full Screen</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="map_view_dummy">Map\nView</string>
    <string name="distance_text">Distance</string>
    <string name="angle_text">Angle</string>
    <string name="temperature_text">Temperature</string>
    <string name="speed_text">Current Speed</string>
    <string name="start_button">Start Navigation</string>
    <string name="proximity_text">Click notification to return to app</string>
    <string name="channel_name">Geofence Notification</string>
    <string name="channel_description">Notice entering or exiting</string>
    <string name="channel_id">A</string>
    <string name="uploadBtn">UPLOAD</string>
    <string name="back_button">BACK</string>
    <string name="upload_text">Upload the checkpoint and your trajectory to ArcGIS Server!</string>
    <string name="track_review_search_button">SEARCH</string>

    <string name="trip_stage_find_checkpoint">Finding checkpoint</string>
    <string name="trip_stage_arrive_checkpoint">Congratulations! You arrived the checkpoint!</string>
    <string name="trip_stage_find_startpoint">Going back to the start point</string>
    <string name="trip_stage_arrive_startpoint">Congratulations! You finished the trip!\n</string>

    <string name="record_saved">Your record is saved!</string>
    <string name="record_not_saved">Cannot detect SD Card! Your record is not saved yet.\n</string>
    <string name="record_not_exist">Cannot find your record!</string>
    <string name="no_record_to_share">You have not finished a trip yet! Keep going:D</string>

    <string name="compass_text">  0°</string>
    <string name="checkpoint_selection">Select a checkpoint you want to go!</string>
    <string name="checkpoint_headto">You are heading to...</string>
    <string name="checkpoint_goback">Found checkpoint! Now return to start point!</string>

    <string name="user_id">8</string>
    <string name="SHARED_PREFERENCE_DATA">DATA</string>
    <string name="SHARED_PREFERENCE_KEY">TRACKID</string>

    <string name="FRAGMENT_TAG_SHARE_DIALOG">ShareDialogFragment</string>
    <string name="FRAGMENT_TAG_UPLOAD_TRACK_DIALOG">UploadTrackDialogFragment</string>
    <string name="FRAGMENT_TAG_BACK_DIALOG">BackDialogFragment</string>
    <string name="ask_for_share_record">Do you want to share your latest achievement?</string>
    <string name="ask_for_share_record_before_exit">Do you want to share your latest achievement before exit?</string>
    <string name="ask_for_upload_track">Do you want to share your trajectory to ArcGIS Server?</string>
    <string name="fire">SHARE</string>
    <string name="exit">EXIT</string>
    <string name="cancel">CANCEL</string>
    <string name="ask_for_back">You have not successfully uploaded your records. Do you really want to go back?</string>
    <string name="back">BACK</string>

    <string name="URL_ROUND_TRIP_TRACK">https://services1.arcgis.com/i9MtZ1vtgD3gTnyL/arcgis/rest/services/roundTripTrack/FeatureServer/0</string>
    <string name="URL_ROUND_TRIP_CHECKPOINT">https://services1.arcgis.com/i9MtZ1vtgD3gTnyL/arcgis/rest/services/roundTripCheckpoint/FeatureServer/0</string>
    <string name="ARCGIS_API">AAPKda949cb9018340c391e118a833642acemDkgC0s-nuo1aqdl1R31JKOZl8uEh4PLBFql1pkNJD_5LifBaT-mU36ZcZtyBdHX</string>
    <string name="world_topo_service">http://services.arcgisonline.com/arcgis/rest/services/World_Topo_Map/MapServer</string>
    <string name="error_cannot_add_to_feature_table">ERROR: Cannot create the feature!</string>
    <string name="feature_added">is successfully added!</string>
    <string name="error_applying_edits">ERROR: Cannot edit the feature table!</string>
    <string name="title_activity_upload_track">Upload Your Track</string>

    <string name="EXTRA_TRACK_ATTRIBUTE">trackAttributes</string>
    <string name="EXTRA_POINT_ATTRIBUTE">pointAttributes</string>
    <string name="EXTRA_TRACK_GEOMETRY">trackGeometry</string>
    <string name="EXTRA_POINT_GEOMETRY">pointGeometry</string>

    <string name="Track_Review_Spinner_All">All Records</string>
    <string name="Track_Review_Spinner_User">User\t</string>
    <!--    Rewards -->
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="icecream">Ice Cream</string>
    <string name="peach">Peach</string>
    <string name="watermelon">Watermelon</string>
    <!--    AR Related -->
    <string name="toast_camera_permission">Camera permission is needed to run this application</string>
    <string name="accountID">f4ceeb34-626b-4a00-b061-37f819573ace</string>
    <string name="accountKey">RKf0612OpvliBz3mzkZH3pacDKbkojGjjSCoxGC/fYI=</string>
    <string name="accountDomain">northeurope.mixedreality.azure.com</string>
    <string name="model_apple">models/Apple.gltf</string>
    <string name="model_banana">models/Banana.gltf</string>
    <string name="model_icecream">models/Ice_Cream.gltf</string>
    <string name="model_peach">models/Peach.gltf</string>
    <string name="model_watermelon">models/watermelon.gltf</string>
    <string name="ar_spinner_default">Select a reward to place</string>
    <string name="DIALOG_ASK_FOR_HELP">You may send a message to +4100000000 to get help :D</string>
    <string name="HELP">HELP</string>
    <string name="FRAGMENT_TAG_HELP_DIALOG">HelpDialogFragment</string>
    <string name="GET_HELP_TEXT">I just met a problem in using CompassNavigate AR Session. The problem is: ...Please write down your problem here...</string>
</resources>